<resources>
    <string name="app_name">مزرعتى</string>

    <string name="tracking">متابعة</string>
    <string name="phone_hint">01 xxx xxx xxxx</string>

    <string name="otp">رمز التحقق</string>
    <string name="verification_code">رمز التحقق</string>
    <string name="verification_text">لقد أرسلنا اليك رمز التحقق</string>

    <string name="first_name">الإسم الأول</string>
    <string name="last_name">الإسم الأخير</string>
    <string name="farm_id">الرقم التعريفى للمزرعة</string>

    <string name="login">تسجيل الدخول</string>
    <string name="mobile">رقم الهاتف</string>
    <string name="invalid_phone_no">قم بادخال رقم هاتف صحيح</string>
    <string name="invalid_country_code">من فضلك قم بإختيار كود بلد صحيح</string>

    <string name="loading">جارى التحميل…</string>
    <string name="error_in_inputs">من فضلك راجع البيانات المدخلة</string>
    <string name="search">البحث</string>
    <string name="data_not_found">لا توجد بيانات للعرض</string>
    <string name="num_of_chicks">ادخل عدد الكتاكيت</string>
    <string name="chicken_number">عدد الكتاكيت</string>
    <string name="num_of_chicken">عدد الفراخ</string>
    <string name="num_of_chicken_x">عدد الفراخ : </string>
    <string name="number_of_dead">كم النافق؟</string>
    <string name="price_of_chicks">ادخل سعر الكتكوت</string>
    <string name="price_of_chicken">سعر الكتكوت</string>
    <string name="complete_registration">إتمام التسجيل</string>

    <string name="add">إضافة</string>
    <string name="remove">إزالة</string>
    <string name="over">ناهي</string>
    <string name="initialize">نامي</string>
    <string name="enter_num_of_bags">ادخل عدد الشكاير</string>
    <string name="num_of_bags">عدد الشكاير</string>
    <string name="enter_price_of_ton">ادخل سعر الطن</string>

    <!-- internet -->
    <string name="no_internet">خطأ فى الإتصال بالإنترنت</string>
    <string name="internet_limited">سرعة الإتصال محدودة</string>


    <string name="trader">تاجر</string>
    <string name="buyer">مشترى</string>
    <string name="buyer_transaction">اضغط لإضافة مشترى</string>
    <string name="trader_transaction">اضغط لإضافة تاجر</string>

    <string name="enter_no_of_cages">العدد الكلى للأقفاص</string>
    <string name="weight_of_empty_cages">وزن الأقفاص الفارغة</string>
    <string name="weight_of_chicken">وزن الفراخ</string>
    <string name="weight_of_full_cages">وزن الأقفاص الممتلئة</string>
    <string name="no_of_chickens">العدد الكلى للفراخ</string>
    <string name="price_of_kg">سعر الكيلوجرام</string>
    <string name="show_bill">اظهار الفاتورة</string>
    <string name="check_inputs">تحقق من صحة البيانات المدخلة</string>
    <string name="traders">التجار</string>
    <string name="buyers">المشترين</string>
    <string name="alerts">التنبيهات</string>
    <string name="debts">الديون</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="die">الوفيات</string>
    <string name="sold">المبيعات</string>
    <string name="growing">بادي</string>

    <string name="operation">العملية</string>
    <string name="price">السعر</string>
    <string name="total_price">السعر الكلى</string>
    <string name="ok">موافق</string>
    <string name="chickens_no_out">الرقم الذى أدخلته أكبر من عدد الأحياء\nمن فضلك تأكد من الرقم المدخل</string>
    <string name="running_period">لديك دورة نشطة بالفعل</string>
    <string name="bags_num_out">عدد الشكاير المدخل أكبر من الموجود\nمن فضلك راجع المدخلات</string>

    <string name="gas">غاز</string>
    <string name="diesel">سولار</string>

    <string name="num_of_gas_cylinders">عدد اسطوانات الغاز</string>
    <string name="num_of_diesel_bottles">عدد لترات السولار</string>
    <string name="heating">الــتــدفــئــة</string>
    <string name="enter_a_number_of_cylinders">ادخل عدد الأنابيب</string>
    <string name="enter_a_price_of_cylinders">ادخل سعر الأنبوبة</string>
    <string name="enter_a_number_of_liters">ادخل عدد اللترات</string>
    <string name="enter_a_price_of_liters">ادخل سعر اللتر</string>
    <string name="le">جنيه</string>
    <string name="liter">لتر</string>
    <string name="cylinder">أنبوبة</string>
    <string name="electricity">الــكــهــربــاء</string>
    <string name="bill">الــــفــــاتــــورة</string>
    <string name="inputs">المدخلات</string>
    <string name="average">المتوسط</string>
    <string name="average_x">المتوسط : </string>
    <string name="calcuation">الحساب</string>
    <string name="transaction">الــمــعــامــلات</string>
    <string name="add_new_transaction">إضافة معاملة جديدة</string>
    <string name="person_data">اسم التاجر</string>
    <string name="average_of_weight">متوسط وزن الفرخ</string>
    <string name="net_weight">الوزن الصافى للفراخ</string>
    <string name="cage">قفص</string>
    <string name="kg">كيلوجرام</string>
    <string name="chick">فرخ</string>
    <string name="saved">تم الحفظ</string>
    <string name="needed_water">كمية المياه المطلوبة باللتر</string>
    <string name="needed_feed">كمية العلف المطلوب بالكيلوجرام</string>
    <string name="temp">درجة الحرارة بالـ ℃</string>
    <string name="duration_of_darkness">مدة الإظلام بالساعة</string>
    <string name="past_days">عدد الايام الى عدت فى الدورة</string>
    <string name="total_number_of_chickens">العدد الكلى للفراخ</string>
    <string name="alive_no">عدد الأحياء</string>
    <string name="dead_no">عدد الأموات</string>
    <string name="total">العدد الكلى</string>
    <string name="used">المستخدم</string>
    <string name="still">المتبقى</string>
    <string name="bag">شكارة</string>
    <string name="buyer_header">اسم المشترى</string>
    <string name="no_enough_chickens">لا يوجد عدد فراخ كافى لاتمام المعاملة</string>
    <string name="no_enough_chicken">لا يوجد عدد فراخ كافى لاتمام العملية</string>
    <string name="remaing">المتبقى</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="edit">تعديل البيانات</string>
    <string name="medicine">الأدوية</string>
    <string name="suppliers">الموردين</string>
    <string name="name">اسم المزرعة</string>
    <string name="weight">الوزن الكلى</string>
    <string name="price_x">السعر : </string>
    <string name="total_sum">الاجمالى</string>
    <string name="transaction_not_found">لا توجد بيانات للعرض</string>
    <string name="expenses">مــصــروفــات</string>
    <string name="chickens">الفراخ</string>
    <string name="feed">الاعلاف</string>
    <string name="more">المزيد</string>
    <string name="chicken_info">معلومات عن المبيعات</string>
    <string name="transaction_information">المــلــخــص</string>
    <string name="zero">0</string>
    <string name="finish">إنهاء الدورة</string>
    <string name="period_info">معلومات الدورة</string>
    <string name="beginning_date">تاريخ البداية</string>
    <string name="end_date">تاريخ النهاية</string>
    <string name="number_of_period_days">عدد أيام الدورة</string>
    <string name="finished">لا يمكن التعديل فى دورة منتهية</string>
    <string name="tap_again">انقر مرة أخرى للخروج من التطبيق</string>
    <string name="cancel">إلغاء</string>
    <string name="finished_message">هل تريد إنهاء الدورة؟</string>
    <string name="balance">الرصيد</string>
    <string name="give">أعطيت</string>
    <string name="enter_reason">ادخل السبب</string>
    <string name="enter_balance">ادخل المبلغ المدفوع</string>
    <string name="trans">المعاملات</string>
    <string name="reason">السبب</string>
    <string name="day">يوم</string>
    <string name="hour">الساعة</string>
    <string name="delete_expenses">هل أنت متأكد من إتمام عملية الحذف؟</string>
    <string name="today">النهارده</string>
    <string name="yesterday">إمبارح</string>
    <string name="running">دورة جارية</string>
    <string name="num_of_petrol_litres">عدد لترات البنزين</string>
    <string name="details">التفاصيل</string>
    <string name="petrol">بنزين</string>
    <string name="receipt">فاتورة</string>
    <string name="num_of_petrol_bottles">عدد لترات البنزين</string>
    <string name="num_of_receipts">عدد الفواتير</string>
    <string name="receipts">فواتير</string>
</resources>