<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet"
    android:orientation="vertical"
    app:behavior_hideable="true">

    <View
        android:id="@+id/remove"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/round_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/alert_shape"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/flag" />

    <TextView
        android:id="@+id/alert_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/finished_message"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_ripple_effect"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_ripple_effect"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>