<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet"
    android:orientation="vertical">

    <View
        android:id="@+id/remove"
        android:layout_width="@dimen/components_height"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/round_remove" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/components_height"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/input_filed"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/components_height"
            android:layout_marginStart="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/input_filed"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/components_height"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin_0.5"
        android:background="@drawable/input_filed"
        android:gravity="center"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/select_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_of_rent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buyer"
            style="@style/focusable_clickable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/components_height"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/gray_stroke">

            <CheckBox
                android:id="@+id/buyer_checkbox"
                style="@style/not_focusable_clickable"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/checkbox"
                android:button="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/not_focusable_clickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="@+id/remove_checkbox"
                app:layout_constraintEnd_toStartOf="@+id/buyer_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buyer_checkbox" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/trader"
            style="@style/focusable_clickable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/components_height"
            android:layout_marginStart="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/gray_stroke">

            <CheckBox
                android:id="@+id/trader_checkbox"
                style="@style/not_focusable_clickable"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/checkbox"
                android:button="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/not_focusable_clickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trader"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="@+id/add_checkbox"
                app:layout_constraintEnd_toStartOf="@+id/trader_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/trader_checkbox" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="@dimen/components_height"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/complete_registration"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view" />


</LinearLayout>