<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet"
    android:orientation="vertical">

    <View
        android:id="@+id/remove"
        android:layout_width="@dimen/components_height"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/round_remove" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/components_height"
            android:background="@drawable/input_filed"
            android:gravity="center"
            android:hint="@string/name"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/root"
            android:layout_width="0dp"
            android:layout_height="@dimen/components_height"
            android:background="@drawable/input_filed"
            android:gravity="center"
            android:hint="@string/farm_id"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toStartOf="@+id/qr_scanner"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <ImageButton
            android:id="@+id/qr_scanner"
            android:layout_width="@dimen/components_height"
            android:layout_height="@dimen/components_height"
            android:background="@drawable/button_ripple_effect"
            android:gravity="center"
            android:src="@drawable/scanner_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/root" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="@dimen/components_height"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/complete_registration"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/root" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>